<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="select_date">Select Date</string>
    <string name="category">Category</string>
</resources>